2008-02-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_fcmpg): Delegate to soft_dcmpg.
	(soft_fcmpl): Delegate to soft_dcmpl.

2008-02-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/intrp/icode.h (cmpg_float, cmpl_float): 
	Use soft_dcmpg and soft_dcmpl internally, as they 
	produce the same results, since the float parameters 
	are automatically widened to equivalent doubles.

2008-02-11  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_dcmp): Documented.

2008-02-11  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_dcmp): New function.
	Implements dcmpl/dcmpg according to VM spec.
	(soft_dcmpl, soft_dcmpg) Call soft_dcmp.

2008-02-03  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/jit-arm.def (cvtfi_RxR): Removed.

2008-02-03  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/jit-icode.h (HAVE_cvt_float_int): Undefine
	to fix jit regression test failure.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	Fixed build with arm-linux-oabi-jit and arm-linux-eabi-jit.
	Reported by:  Robert Schuster  <robertschuster@fsfe.org>

	* config/Makefile.am (EXTRA_DIST): Added arm/linux/linux-eabi.h
	and arm/linux/linux-gas.h.

	* config/arm/linux/linux-eabi.h,
	onfig/arm/linux/linux-gas.h: New files, imported from GCC.
	
	* config/arm/linux/md.c: Include linux-eabi.h when using EABI
	and linux-gas otherwise for cache flushing code.
	(flish_dcache) Use CLEAR_INSN_CACHE.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c:
	Don't use __USE_GNU, use _GNU_SOURCE instead.

	* TODO: Updated.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.bignum: Removed.

	* Makefile.am (EXTRA_DIST): Removed FAQ/FAQ.bignum.

	* THIRDPARTY: Remove section on gmp.m4.

	* FAQ/FAQ.requiredlibraries: Removed section on ESD, ALSA, 
	GNU MP, and libmd.

	* FAQ/FAQ.ps2linux: Removed paragraph on GNU MP.
	